<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card_bg"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/info"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="note"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                android:background="@drawable/card_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encryption"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_plaintext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/EP"
                        android:imeOptions="actionSearch"
                        android:inputType="textCapCharacters"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/EK"
                        android:imeOptions="actionSearch"
                        android:inputType="number"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/encrypt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/encrypt" />
            </LinearLayout>
            </LinearLayout>

        <LinearLayout
                android:id="@+id/ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@drawable/card_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/encrypted"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/purssian_blue_700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp" >

                    <TextView
                        android:id="@+id/plaintext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/plaintext"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textIsSelectable="true"
                        />

                    <TextView
                        android:id="@+id/key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/key"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textIsSelectable="true"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/card_bg1"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:gravity="center"
                            android:text="@string/ciphertext"
                            android:background="@drawable/backgroundeditview"
                            android:textColor="@color/burn_red_700"
                            android:textAppearance="?android:textAppearanceMedium"
                            />

                        <TextView
                            android:id="@+id/ciphertext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:gravity="center"
                            android:text="@string/ciphertext"
                            android:textColor="@color/burn_red_700"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textIsSelectable="true"
                            />
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/clear" />
            </LinearLayout>
    </LinearLayout>

</ScrollView>