<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModuloActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_percent=".1"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        >
        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/criptografia"/>
        <TextView
            android:id="@+id/textView"
            android:layout_toRightOf="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/modulo"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calculate"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:background="@drawable/tab_bg"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:background="@drawable/card_bg"
            android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    >
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/integer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/integer"
                        android:inputType="number"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/mod"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/modulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/modulo"
                        android:inputType="number"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/calculate" />

                <LinearLayout
                    android:id="@+id/ans_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg1"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/ans_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/answer"
                        android:background="@drawable/backgroundeditview"
                        android:textColor="@color/burn_red_700"
                        android:textAppearance="?android:textAppearanceMedium"
                        />

                    <TextView
                        android:id="@+id/ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/answer"
                        android:textColor="@color/burn_red_700"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textIsSelectable="true"
                        />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>